<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/mainBackground">

    <!-- Title -->
    <TextView
        android:id="@+id/homeTitle"
        style="@style/MyHeadingStyle"
        android:text="@string/welcome_new_ninjaTitle" />

    <ImageView
        android:id="@+id/ninjaLevelIMG"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        app:srcCompat="@drawable/determinedninja"
        android:layout_below="@+id/homeTitle"
        android:contentDescription="@string/ninja" />

    <TextView
        android:id="@+id/levelDescription"
        android:layout_below="@id/ninjaLevelIMG"
        style="@style/myTextViewsNINJA"
        android:text="@string/ninja_adept_descriptionTXT"
        android:textColor="@color/fontColour"/>

    <!-- Buttons -->
    <Button
        android:id="@+id/goToMainHome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/levelDescription"
        android:text="@string/continueBtn"
        style="@style/myButtonsNINJA"
        android:onClick="goToMainHome"/>

</RelativeLayout>
</ScrollView>