<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <!-- Title -->
    <TextView
        android:id="@+id/personalQuotesTitle"
        android:text="@string/quotesListTitle"
        style="@style/MyHeadingStyle" />

    <!-- Text fields -->
    <TextView
        android:id="@+id/quoteOfTheDayList"
        android:text=""
        android:textColor="@color/h2Title"
        android:textStyle="bold"
        android:textSize="26sp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/personalQuotesTitle"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/listTitle"
        android:text="@string/resultsLbl"
        style="@style/myTextViewsNINJA"
        android:layout_below="@+id/quoteOfTheDayList"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
         />

    <TextView
        android:id="@+id/timeToChangeQuote"
        android:text="10:11:23"
        style="@style/myTextViewsNINJA"
        android:layout_alignBaseline="@+id/time_forQuotesLBL"
        android:layout_alignBottom="@+id/time_forQuotesLBL"
        android:layout_alignEnd="@+id/listTitle" />

    <ImageView
        android:id="@+id/thumbsUp"
        android:layout_width="180dp"
        android:layout_marginTop="-10dp"

        android:layout_height="180dp"
        android:layout_below="@+id/quoteOfTheDayList"
        android:layout_toEndOf="@+id/timeToChangeQuote"
        android:layout_alignTop="@+id/listTitle"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/thumbsupninja"
        android:contentDescription="@string/ninja" />

    <TextView
        android:id="@+id/time_forQuotesLBL"
        android:text="@string/timeLBL"
        style="@style/myTextViewsNINJA"
        android:layout_below="@+id/listTitle"
        android:layout_alignStart="@+id/listTitle"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/quotesNumberLBL"
        android:text="@string/quotesNumberLBL"
        style="@style/myTextViewsNINJA"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/time_forQuotesLBL"
        android:layout_alignStart="@+id/time_forQuotesLBL" />

    <TextView
        android:id="@+id/fullListOfQuotes"
        android:text=""
        android:layout_below="@+id/thumbsUp"
        android:layout_alignParentEnd="true"
        style="@style/textDescriptionStyle"/>

    <!-- Buttons -->
    <Button
        android:id="@+id/continueBtn"
        android:text="@string/continueBtn"
        android:layout_below="@+id/fullListOfQuotes"
        android:layout_centerHorizontal="true"
        style="@style/myButtonsNINJA"
        android:onClick="returnToHome"
         />

    <TextView
        android:id="@+id/quotesTotal"
        android:text="122"
        style="@style/myTextViewsNINJA"
        android:layout_alignBaseline="@+id/quotesNumberLBL"
        android:layout_alignBottom="@+id/quotesNumberLBL"
        android:layout_alignEnd="@+id/timeToChangeQuote" />


</RelativeLayout>
</ScrollView>