<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <!-- Title -->
    <TextView
        android:id="@+id/mainHomeTitle"
        style="@style/MyHeadingStyle"
        android:text="" />

    <ImageView
        android:id="@+id/quizInfoIMG"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ninjamain"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/mainHomeTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ninja" />

    <TextView
        android:id="@+id/quoteOfTheDay"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/h2Title"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/quizInfoIMG"

        style="@style/myTextViewsNINJA" />
    <!-- Buttons -->
    <Button
        android:id="@id/addQuotesBtn"
        android:text="@string/addQuotesBtn"
        android:layout_below="@+id/quoteOfTheDay"
        android:layout_alignStart="@+id/mainHomeTitle"
        style="@style/myButtonsNINJA"
        android:onClick="addQuote"/>

    <Button
        android:id="@+id/startQuizBtn"
        android:text="@string/continueBtn"
        android:layout_below="@+id/quoteOfTheDay"
        android:layout_alignEnd="@+id/mainHomeTitle"
        style="@style/myButtonsNINJA"
        android:onClick="startQuizFromInfo"
        android:layout_marginBottom="10dp"
         />

    <Button
        android:id="@+id/quotesListBtn"
        android:text="Quotes List"
        android:layout_below="@+id/startQuizBtn"
        android:layout_alignStart="@+id/mainHomeTitle"
        style="@style/myButtonsNINJA"
        android:layout_marginBottom="0dp"
       />

    <Button
        android:id="@+id/quoteSettingsBtn"
        android:text="Settings"
        android:layout_below="@+id/startQuizBtn"
        android:layout_alignEnd="@+id/mainHomeTitle"
        style="@style/myButtonsNINJA"

        android:layout_marginBottom="0dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:id="@+id/setQuoteTime"
        android:layout_marginTop="0dp"
        android:ems="4"
        style="@style/EditTextStyle"
        android:layout_below="@+id/quotesListBtn"/>


    <TextView
        android:id="@+id/quoteOfTheDayLabel"
        android:layout_below="@id/setQuoteTime"

        style="@style/myTextViewsNINJA"
        android:text="@string/quote_to_remember"
        android:textColor="@color/fontColour"/>

    <TextView
        android:id="@+id/quoteOfTheDay1"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/h2Title"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/quoteOfTheDayLabel"

        style="@style/myTextViewsNINJA" />

</RelativeLayout>
    </ScrollView>